--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
       <version>4.12</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.hive</groupId>
+      <artifactId>hive-exec</artifactId>
+      <version>3.1.0</version>
+    </dependency>
   </dependencies>
   <distributionManagement>
     <snapshotRepository>
